// Copyright 2016 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package settings;

// Settings is the coniguration settings for this service.
message Settings {
  // (Required) The host (e.g., "example.com") of the BuildBucket service to
  // use.
  string buildbucket_host = 1;
  // The host (e.g., "example.com") of the Milo service to use.
  string milo_host = 2;

  // BuildBucket bucket to use when querying for the latest builds on ToT.
  string master_bucket = 3;
  // BuildBucket bucket to use when querying for the latest builds on release.
  string release_bucket = 4;
}
